--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<div class="index-main-pic">
-			<img src="img/welcome.png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title">
+			<img src="img/welcome.png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title" width="459" height="353">
 		</div>
 		<div class="main-slogan-wrapper">
 			<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -38,7 +38,7 @@
 						<p class="reasons-number">— №1 —</p>
 						<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
 					</div>
-					<img src="img/ind/reason-number-1.jpg" width="800" alt="Фото в городе Седона">
+					<img src="img/ind/reason-number-1.jpg" width="800" height="254" alt="Фото в городе Седона">
 				</div>
 				<section class="attractions">
 					<div class="attractions-info left">
@@ -60,7 +60,7 @@
 						<p class="reasons-number">— №2 —</p>
 						<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
-					<img src="img/ind/reason-number-2.jpg" width="800" alt="Фото моста дьявола">
+					<img src="img/ind/reason-number-2.jpg" width="800" height="254" alt="Фото моста дьявола">
 				</div>
 				<div class="reasons-container">
 					<div class="reasons-info reasons-wrapper">
@@ -87,7 +87,7 @@
 						<p><span>Укажите предполагаемые даты поездки,</span> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 					</div>
 					<div class="map-wrapper">
-						<img src="img/ind/map.jpg" width="1200" height="622" alt="Город Седона на карте">
+						<img src="img/ind/map.jpg" width="1200" height="522" alt="Город Седона на карте">
 						<div class="main-form">
 							<button class="button travel-search-button">Поиск гостиницы в Седоне</button>
 							<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
