price controls improved

--- a/hotels.html
+++ b/hotels.html
@@ -118,8 +118,10 @@
                                         <a class="hotel-name" href="found-hotel.html">Amara Resort & Spa</a>
                                     </h3>
                                     <b><span>Гостиница</span><span>от 4000 р.</span></b>
-                                    <a class="details-button" href="found-hotel-details.html">Подробнее</a>
-                                    <a class="button reserve-button" href="#">Забронировать</a>
+                                    <div class="hotel-button-wrapper">
+                                        <a class="details-button" href="found-hotel-details.html">Подробнее</a>
+                                        <a class="button reserve-button" href="#">Забронировать</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
@@ -141,8 +143,10 @@
                                         <a class="hotel-name" href="found-hotel.html">Desert Quail Inn</a>
                                     </h3>
                                     <b><span>Мотель</span><span>от 3000 р.</span></b>
-                                    <a class="details-button" href="found-hotel-details.html">Подробнее</a>
-                                    <a class="button reserve-button" href="#">Забронировать</a>
+                                    <div class="hotel-button-wrapper">
+                                        <a class="details-button" href="found-hotel-details.html">Подробнее</a>
+                                        <a class="button reserve-button" href="#">Забронировать</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
@@ -164,8 +168,10 @@
                                         <a class="hotel-name" href="found-hotel.html">Villas at Poco Diablo</a>
                                     </h3>
                                     <b><span>Апартаменты</span><span>от 2000 р.</span></b>
-                                    <a class="details-button" href="found-hotel-details.html">Подробнее</a>
-                                    <a class="button reserve-button" href="#">Забронировать</a>
+                                    <div class="hotel-button-wrapper">
+                                        <a class="details-button" href="found-hotel-details.html">Подробнее</a>
+                                        <a class="button reserve-button" href="#">Забронировать</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
