--- a/hotels.html
+++ b/hotels.html
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <b class="four-stars">4 звезды</b>
+                                <p class="four-stars">4 звезды</p>
                                 <p>Рейтинг: 8,5</p>
                             </div>
                         </div>
