--- a/hotels.html
+++ b/hotels.html
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <b class="three-stars">3 звезды</b>
+                                <p class="three-stars">3 звезды</b>
                                 <p>Рейтинг: 8,9</p>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <b class="two-stars">2 звезды</b>
+                                <p class="two-stars">2 звезды</b>
                                 <p>Рейтинг: 9,2</p>
                             </div>
                         </div>
