--- a/hotels.html
+++ b/hotels.html
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <p class="four-stars">4 звезды</p>
+                                <p class="four-stars"><span class="visually-hidden">4 звезды</span></p>
                                 <p>Рейтинг: 8,5</p>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <p class="three-stars">3 звезды</b>
+                                <p class="three-stars"><span class="visually-hidden">3 звезды</span></b>
                                 <p>Рейтинг: 8,9</p>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <p class="two-stars">2 звезды</b>
+                                <p class="two-stars"><span class="visually-hidden">2 звезды</span></b>
                                 <p>Рейтинг: 9,2</p>
                             </div>
                         </div>
