--- a/hotels.html
+++ b/hotels.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Отели Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <p class="three-stars"><span class="visually-hidden">3 звезды</span></b>
+                                <p class="three-stars"><span class="visually-hidden">3 звезды</span></p>
                                 <p>Рейтинг: 8,9</p>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="found-hotel-ratings">
-                                <p class="two-stars"><span class="visually-hidden">2 звезды</span></b>
+                                <p class="two-stars"><span class="visually-hidden">2 звезды</span></p>
                                 <p>Рейтинг: 9,2</p>
                             </div>
                         </div>
