--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<section class="reasons-attractions">
 				<div class="reasons-info left">
 					<div class="reasons-wrapper">
-						<h2 class="reasons-name">Настоящий городок</h2>
+						<h2 class="reasons-name">Настоящий<br>городок</h2>
 						<p class="reasons-number">— №1 —</p>
 						<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
 					</div>
@@ -56,7 +56,7 @@
 				</section>
 				<div class="reasons-info right">
 					<div class="reasons-wrapper">
-						<h2 class="reasons-name">Там есть мост дьявола</h2>
+						<h2 class="reasons-name">Там есть<br>мост дьявола</h2>
 						<p class="reasons-number">— №2 —</p>
 						<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
