--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Отели Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -114,7 +114,7 @@
                             <div class="hotel-wrapper">
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
-                                        <img src="img/hotels/hotel-1.png" width="135" height="89" alt="Фото отеля Amara Resort & Spa">
+                                        <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
                                     </a>
                                 </p>
                                 <div class="found-hotel-information">
@@ -139,7 +139,7 @@
                             <div class="hotel-wrapper">
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
-                                        <img src="img/hotels/hotel-2.png" width="135" height="87" alt="Фото отеля Desert Quail Inn">
+                                        <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
                                     </a>
                                 </p>
                                 <div class="found-hotel-information">
@@ -164,7 +164,7 @@
                             <div class="hotel-wrapper">
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
-                                        <img src="img/hotels/hotel-3.png" width="135" height="87" alt="Фото отеля Villas at Poco Diablo">
+                                        <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
                                     </a>
                                 </p>
                                 <div class="found-hotel-information">
