Выровнены все блоки

--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Отели Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -111,7 +111,7 @@
                 <ul class="found-hotels-results">
                     <li class="found-hotel">
                         <div class="inner-item-hotel">
-                            <div class="hotel-wrapper">
+
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
                                         <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
@@ -127,7 +127,7 @@
                                         <a class="button reserve-button" href="#">Забронировать</a>
                                     </div>
                                 </div>
-                            </div>
+
                             <div class="found-hotel-ratings">
                                 <p class="four-stars"><span class="visually-hidden">4 звезды</span></p>
                                 <p>Рейтинг: 8,5</p>
@@ -136,7 +136,7 @@
                     </li>
                     <li class="found-hotel">
                         <div class="inner-item-hotel">
-                            <div class="hotel-wrapper">
+
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
                                         <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
@@ -152,7 +152,7 @@
                                         <a class="button reserve-button" href="#">Забронировать</a>
                                     </div>
                                 </div>
-                            </div>
+
                             <div class="found-hotel-ratings">
                                 <p class="three-stars"><span class="visually-hidden">3 звезды</span></p>
                                 <p>Рейтинг: 8,9</p>
@@ -161,10 +161,10 @@
                     </li>
                     <li class="found-hotel">
                         <div class="inner-item-hotel">
-                            <div class="hotel-wrapper">
+
                                 <p class="found-hotel-image">
                                     <a href="found-hotel.html">
-                                        <img src="img/hotels/hotel-3.png" width="135" height="89" alt="Фото отеля Villas at Poco Diablo">
+                                        <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
                                     </a>
                                 </p>
                                 <div class="found-hotel-information">
@@ -177,7 +177,7 @@
                                         <a class="button reserve-button" href="#">Забронировать</a>
                                     </div>
                                 </div>
-                            </div>
+
                             <div class="found-hotel-ratings">
                                 <p class="two-stars"><span class="visually-hidden">2 звезды</span></p>
                                 <p>Рейтинг: 9,2</p>
@@ -188,7 +188,9 @@
             </section>
         </main>
         <footer class="main-footer hotels-footer">
-            <a href="#" class="sedona-hashtag">#visitsedona</a>
+            <div class="hashtag-wrapper">
+                <a href="#" class="sedona-hashtag">#visitsedona</a>
+            </div>
             <ul>
                 <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17"
