--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>HTML Academy: Седона</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -138,7 +138,9 @@
 			</div>
 		</main>
 		<footer class="main-footer index-footer">
-			<a href="#" class="sedona-hashtag">#visitsedona</a>
+			<div class="hashtag-wrapper">
+				<a href="#" class="sedona-hashtag">#visitsedona</a>
+			</div>
 			<ul>
 				<li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span>
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
@@ -166,6 +168,8 @@
 		</footer>
 	</div>
 	<script src="js/app.min.js">
+
+
 
 	</script>
 </body>
